fix spacing on stream page [FINISH #91145140]

--- a/app/styles/_forms.scss
+++ b/app/styles/_forms.scss
@@ -94,6 +94,7 @@ body.base {
 	.input-append {
     .btn {
       padding: { top: 6px; bottom: 6px;}
+      line-height: 1.49;
       &.btn-small { font-size: 12px; padding: { top: 3px; bottom: 3px;}}
     }
 	}
