--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -827,7 +827,6 @@ i[class*="icon"] {font-style: normal;}
 .lower-content {
   padding-bottom: 30px;
   h4 { margin-top: 0px;}
-  .row-fluid:first-of-type { margin-top: 0px;}
   .row-fluid [class*="span3"] {
     @media screen and (max-width: 1000px) {
       width: 31.91%;
